--- a/test.ipynb
+++ b/test.ipynb
@@ -1,14 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- save and load as  classmethod?\n",
-    "- overload constructor?"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -24,20 +16,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from sklearn.pipeline import Pipeline\n",
-    "# from sklearn.preprocessing import FunctionTransformer\n",
-    "# from unidecode import unidecode\n",
-    "# from tokenizer.bpe_tokenizer import BytePairEncodingTokenizer\n",
+    "import torch\n",
     "\n",
-    "# tokenizer = BytePairEncodingTokenizer(0)\n",
-    "# tokenizer.load('tokenizer/trained_tokenizers/bpe.pkl')\n",
-    "\n",
-    "# pipeline = Pipeline([\n",
-    "#     ('unicode_to_ascii', FunctionTransformer(unidecode)),\n",
-    "#     ('encode', FunctionTransformer(tokenizer.encode))\n",
-    "# ])\n",
-    "\n",
-    "# pipeline.transform('lowest')"
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'"
    ]
   },
   {
@@ -49,19 +30,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1095\n"
+      "195\n"
      ]
     }
    ],
    "source": [
     "from tokenizer.bpe_tokenizer import BytePairEncodingTokenizer\n",
+    "from pipelines.text_to_tensor import create_pipeline\n",
     "\n",
-    "text = text[:50000]\n",
+    "text = text[:1000]\n",
     "\n",
-    "tokenizer = BytePairEncodingTokenizer(1000)\n",
+    "tokenizer = BytePairEncodingTokenizer(100)\n",
+    "\n",
     "tokenizer.fit([text])\n",
     "\n",
-    "print(tokenizer.vocab_size)"
+    "print(tokenizer.vocab_size)\n",
+    "\n",
+    "pipeline = create_pipeline(tokenizer, 0.9)\n",
+    "\n",
+    "train_data, test_data = pipeline.transform(text)"
    ]
   },
   {
@@ -70,14 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "\n",
-    "data = torch.tensor(tokenizer.encode(text), dtype=torch.long)\n",
-    "\n",
-    "n = int(0.9 * len(data))\n",
-    "\n",
-    "train_data = data[:n]\n",
-    "test_data = data[n:]\n"
+    "from enumerations.data_splits import DataSplits"
    ]
   },
   {
@@ -86,49 +66,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import Tuple\n",
+    "\n",
+    "import torch\n",
+    "\n",
     "context_length = 64\n",
     "batch_size = 64\n",
     "\n",
-    "def get_batch():\n",
+    "def get_batch(split: DataSplits, batch_size: int, context_length: int, device: str = 'cpu') -> Tuple[torch.tensor, torch.tensor]:\n",
+    "    data = train_data if split == DataSplits.TRAIN else test_data\n",
+    "\n",
+    "    print(split == DataSplits.TEST)\n",
+    "\n",
+    "    assert len(data) - context_length >= 0, 'Length of data is shorter than context_length'\n",
+    "\n",
     "    idx = torch.randint(len(data) - context_length, (batch_size, ))\n",
     "    x = torch.stack([data[i:i + context_length] for i in idx])\n",
     "    y = torch.stack([data[i + 1:i + context_length + 1] for i in idx])\n",
+    "    x, y = x.to(device), y.to(device)\n",
     "    return x, y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20.061255 M parameters\n"
-     ]
-    }
-   ],
-   "source": [
-    "from language_model.model import Encoder\n",
-    "\n",
-    "embed_size = 512\n",
-    "num_layers = 6\n",
-    "num_heads = 8\n",
-    "forward_expansion = 4\n",
-    "dropout = 0\n",
-    "\n",
-    "model = Encoder(\n",
-    "    tokenizer.vocab_size,\n",
-    "    embed_size,\n",
-    "    context_length,\n",
-    "    num_layers,\n",
-    "    num_heads,\n",
-    "    forward_expansion,\n",
-    "    dropout\n",
-    ")\n",
-    "\n",
-    "print(sum([p.numel() for p in model.parameters()]) / 1e6, 'M parameters')"
    ]
   },
   {
@@ -140,62 +96,68 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "5\n",
-      "10\n",
-      "15\n",
-      "20\n",
-      "25\n",
-      "30\n",
-      "35\n",
-      "40\n",
-      "45\n",
-      " arth\n",
-      "seCw show thee T\n",
-      "\n",
-      ";esAu F\n",
-      " keepthe atstononinthth pte'd,ionnot:,\n",
-      "VIRGILIA:hreow\n",
-      "c thedcome \n",
-      "reodw:adoorlC\n",
-      "Il\n",
-      "Marciushus ,ghepthe  mo ueyeedaamfolethey le AUFIDIUS:heacavecabon wcome\n",
-      "elseesgo c er aLARTIUS: edearwre  brweattheve ,neandthate  nean batfiseu\n",
-      "tonAflya \n",
-      ";theersfa\n",
-      "rtheMes\n",
-      " a -ctiou gm noblesay atc   am\n",
-      "hath\n",
-      " carry ahuhm ati , sayinof My\n",
-      "VOLUMNIA:WCome,he Firstuswellpeople,Ion.'comehMARCIUS:vatrs!con\n",
-      " madam;is  \n",
-      "conitiMarciusIarsNthata Marcius ;\n",
-      "'tmy herf poorUSinut\n",
-      "we fe'Tishe inionWisyou\n",
-      "ow: LARTIUS:wis ding\n",
-      "matter isMaredreo' a atisirc leleinlebes\n",
-      "havepo awwhich\n",
-      "ouWld rnans  vnisandased, erisour hekbutfemathiw\n",
-      "  the on umbutr'tuegtheube do \n",
-      "mionno ce\n",
-      "worthyto IbonkambulesTend ones\n",
-      "seels!sword to\n",
-      "aeny. go\n",
-      "liat.roer atyatHa\n",
-      "restalreadHowesupsuf  es orittimealove ofbe     welldasdo ithethlne ap\n",
-      " have  itfahem,enourfiwinonomEvenld:thesayconrihanots. s  \n",
-      "enLARTIUS: Ofwillswethetledmight   th  .l s we tiyy   \n"
+      "19.138755 M parameters\n"
      ]
     }
    ],
    "source": [
+    "from language_model.model import LanguageModel\n",
+    "\n",
+    "embed_size = 512\n",
+    "num_layers = 6\n",
+    "num_heads = 8\n",
+    "forward_expansion = 4\n",
+    "dropout = 0\n",
+    "\n",
+    "model = LanguageModel(\n",
+    "    tokenizer,\n",
+    "    embed_size,\n",
+    "    context_length,\n",
+    "    num_layers,\n",
+    "    num_heads,\n",
+    "    forward_expansion,\n",
+    "    dropout,\n",
+    "    device\n",
+    ")\n",
+    "\n",
+    "print(sum([p.numel() for p in model.encoder.parameters()]) / 1e6, 'M parameters')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@torch.no_grad()\n",
+    "def estimate_loss():\n",
+    "    out = {}\n",
+    "    model.eval()\n",
+    "    for split in [DataSplits.TRAIN, DataSplits.TEST]:\n",
+    "        losses = torch.zeros(50)\n",
+    "        for k in range(50):\n",
+    "            x, y = get_batch(split, batch_size, context_length)\n",
+    "            logits, loss = model(x, y)\n",
+    "            losses[k] = loss.item()\n",
+    "        out[split] = losses.mean()\n",
+    "    model.train()\n",
+    "    return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "optimizer = torch.optim.AdamW(model.parameters(), lr=0.05)\n",
     "\n",
     "for iter in range(50):\n",
-    "    if iter % 5 == 0:\n",
-    "        print(iter)\n",
+    "    if iter % 5 == 0 or iter == 49:\n",
+    "        losses = estimate_loss()\n",
+    "        print(f\"step {iter}: train loss {losses[DataSplits.TRAIN]:.4f}, test loss {losses[DataSplits.TEST]:.4f}\")\n",
     "\n",
-    "    x_batch, y_batch = get_batch()\n",
+    "    x_batch, y_batch = get_batch(DataSplits.TRAIN, batch_size, context_length)\n",
     "\n",
     "    logits, loss = model(x_batch, y_batch)\n",
     "    optimizer.zero_grad(set_to_none=True)\n",
@@ -205,13 +167,57 @@
     "context = torch.zeros((1,1), dtype=torch.long)\n",
     "print(tokenizer.decode(model.generate(context, max_new_tokens=500)[0].tolist()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from language_model.model import LanguageModel\n",
+    "\n",
+    "embed_size = 512\n",
+    "num_layers = 6\n",
+    "num_heads = 8\n",
+    "forward_expansion = 4\n",
+    "dropout = 0\n",
+    "\n",
+    "model = LanguageModel(\n",
+    "    tokenizer,\n",
+    "    embed_size,\n",
+    "    context_length,\n",
+    "    num_layers,\n",
+    "    num_heads,\n",
+    "    forward_expansion,\n",
+    "    dropout\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.10.5 64-bit",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.5"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
