Added saving and loading of models

--- a/test.ipynb
+++ b/test.ipynb
@@ -6,8 +6,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('datasets/shakespeare.txt') as file:\n",
-    "    text = file.read()"
+    "from enumerations.data_splits import DataSplits\n",
+    "\n",
+    "import torch\n",
+    "torch.manual_seed(1337)\n",
+    "\n",
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "\n",
+    "context_length = 256\n",
+    "batch_size = 64\n",
+    "embed_size = 512\n",
+    "num_layers = 6\n",
+    "num_heads = 8\n",
+    "forward_expansion = 4\n",
+    "dropout = 0.2\n",
+    "\n",
+    "max_iters = 100\n",
+    "eval_iters = 2\n",
+    "eval_interval = 5\n",
+    "learning_rate = 3e-4"
    ]
   },
   {
@@ -16,9 +33,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "\n",
-    "device = 'cuda' if torch.cuda.is_available() else 'cpu'"
+    "with open('datasets/shakespeare.txt') as file:\n",
+    "    text = file.read()"
    ]
   },
   {
@@ -30,7 +46,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "195\n"
+      "1095\n"
      ]
     }
    ],
@@ -38,9 +54,9 @@
     "from tokenizer.bpe_tokenizer import BytePairEncodingTokenizer\n",
     "from pipelines.text_to_tensor import create_pipeline\n",
     "\n",
-    "text = text[:1000]\n",
+    "text = text[:50000]\n",
     "\n",
-    "tokenizer = BytePairEncodingTokenizer(100)\n",
+    "tokenizer = BytePairEncodingTokenizer(1000)\n",
     "\n",
     "tokenizer.fit([text])\n",
     "\n",
@@ -57,26 +73,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from enumerations.data_splits import DataSplits"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from typing import Tuple\n",
     "\n",
     "import torch\n",
     "\n",
-    "context_length = 64\n",
-    "batch_size = 64\n",
-    "\n",
     "def get_batch(split: DataSplits, batch_size: int, context_length: int, device: str = 'cpu') -> Tuple[torch.tensor, torch.tensor]:\n",
     "    data = train_data if split == DataSplits.TRAIN else test_data\n",
-    "\n",
-    "    print(split == DataSplits.TEST)\n",
     "\n",
     "    assert len(data) - context_length >= 0, 'Length of data is shorter than context_length'\n",
     "\n",
@@ -89,25 +91,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "19.138755 M parameters\n"
+      "20.159559 M parameters\n"
      ]
     }
    ],
    "source": [
     "from language_model.model import LanguageModel\n",
-    "\n",
-    "embed_size = 512\n",
-    "num_layers = 6\n",
-    "num_heads = 8\n",
-    "forward_expansion = 4\n",
-    "dropout = 0\n",
     "\n",
     "model = LanguageModel(\n",
     "    tokenizer,\n",
@@ -125,72 +121,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\" three*state,$ratslegshallNoblebarsyselfherdillLet'scupuefairhe.woreot.him.Officer@tribunesbeforecarmineThatstrangeDpleaseHectorit;heardkindifMes^minKingmarknewelsecruelIt4uchHis\""
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(' ', max_new_tokens=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "@torch.no_grad()\n",
     "def estimate_loss():\n",
     "    out = {}\n",
-    "    model.eval()\n",
+    "    model.encoder.eval()\n",
     "    for split in [DataSplits.TRAIN, DataSplits.TEST]:\n",
-    "        losses = torch.zeros(50)\n",
-    "        for k in range(50):\n",
+    "        losses = torch.zeros(eval_iters)\n",
+    "        for k in range(eval_iters):\n",
     "            x, y = get_batch(split, batch_size, context_length)\n",
-    "            logits, loss = model(x, y)\n",
+    "            logits, loss = model.encoder(x, y)\n",
     "            losses[k] = loss.item()\n",
     "        out[split] = losses.mean()\n",
-    "    model.train()\n",
+    "    model.encoder.train()\n",
     "    return out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step 0: train loss 7.0785, test loss 7.0803\n",
+      "step 1: train loss 7.1452, test loss 7.0664\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "' ayadaddidagainstbutguCOMINIUS:speakshowil\\nwebeen-s!VIRGILIA:ghtcopRceCaiusghtTotellafme,atshiartthckyouguVIRGILIA:didoffTheyofftrs!CORIOLANUS:becomeshihimfiWaccbu'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "optimizer = torch.optim.AdamW(model.parameters(), lr=0.05)\n",
+    "optimizer = torch.optim.AdamW(model.encoder.parameters(), lr=0.05)\n",
     "\n",
-    "for iter in range(50):\n",
-    "    if iter % 5 == 0 or iter == 49:\n",
+    "for iter in range(max_iters):\n",
+    "    if iter % eval_interval == 0 or iter == max_iters -1 :\n",
     "        losses = estimate_loss()\n",
     "        print(f\"step {iter}: train loss {losses[DataSplits.TRAIN]:.4f}, test loss {losses[DataSplits.TEST]:.4f}\")\n",
     "\n",
     "    x_batch, y_batch = get_batch(DataSplits.TRAIN, batch_size, context_length)\n",
     "\n",
-    "    logits, loss = model(x_batch, y_batch)\n",
+    "    logits, loss = model.encoder(x_batch, y_batch)\n",
     "    optimizer.zero_grad(set_to_none=True)\n",
     "    loss.backward()\n",
     "    optimizer.step()\n",
     "\n",
-    "context = torch.zeros((1,1), dtype=torch.long)\n",
-    "print(tokenizer.decode(model.generate(context, max_new_tokens=500)[0].tolist()))"
+    "model.predict(' ', 50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\" COMINIUS:ce,me,teaveitizenheardblewasthusWeiercosdrwarrmfrimeghtabhim,illupsSentMys!s!LARTIUS:bodi's!WhichayshowbrCORIOLANUS:AUFIDIUS:s!ayEarmIueoffanywork\""
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from language_model.model import LanguageModel\n",
-    "\n",
-    "embed_size = 512\n",
-    "num_layers = 6\n",
-    "num_heads = 8\n",
-    "forward_expansion = 4\n",
-    "dropout = 0\n",
-    "\n",
-    "model = LanguageModel(\n",
-    "    tokenizer,\n",
-    "    embed_size,\n",
-    "    context_length,\n",
-    "    num_layers,\n",
-    "    num_heads,\n",
-    "    forward_expansion,\n",
-    "    dropout\n",
-    ")"
+    "model.predict(' ', 50)"
    ]
   }
  ],
