--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "\n",
-    "context_length = 256\n",
+    "context_length = 128\n",
     "batch_size = 64\n",
     "embed_size = 512\n",
     "num_layers = 6\n",
@@ -21,15 +21,15 @@
     "forward_expansion = 4\n",
     "dropout = 0.2\n",
     "\n",
-    "max_iters = 100\n",
+    "max_iters = 50\n",
     "eval_iters = 2\n",
-    "eval_interval = 5\n",
+    "eval_interval = 10\n",
     "learning_rate = 3e-4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,22 +39,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1095\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tokenizer.bpe_tokenizer import BytePairEncodingTokenizer\n",
     "from pipelines.text_to_tensor import create_pipeline\n",
     "\n",
-    "text = text[:50000]\n",
+    "text = text[:5000]\n",
     "\n",
     "tokenizer = BytePairEncodingTokenizer(1000)\n",
     "\n",
@@ -69,13 +61,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from typing import Tuple\n",
-    "\n",
-    "import torch\n",
     "\n",
     "def get_batch(split: DataSplits, batch_size: int, context_length: int, device: str = 'cpu') -> Tuple[torch.tensor, torch.tensor]:\n",
     "    data = train_data if split == DataSplits.TRAIN else test_data\n",
@@ -91,17 +81,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20.159559 M parameters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from language_model.model import LanguageModel\n",
     "\n",
@@ -121,32 +103,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\" three*state,$ratslegshallNoblebarsyselfherdillLet'scupuefairhe.woreot.him.Officer@tribunesbeforecarmineThatstrangeDpleaseHectorit;heardkindifMes^minKingmarknewelsecruelIt4uchHis\""
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model.predict(' ', max_new_tokens=50)"
+    "model.predict(' ', max_new_tokens=100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import Dict\n",
+    "\n",
     "@torch.no_grad()\n",
-    "def estimate_loss():\n",
+    "def estimate_loss(model: LanguageModel) -> Dict[int, torch.tensor]:\n",
     "    out = {}\n",
     "    model.encoder.eval()\n",
     "    for split in [DataSplits.TRAIN, DataSplits.TEST]:\n",
@@ -162,34 +135,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "step 0: train loss 7.0785, test loss 7.0803\n",
-      "step 1: train loss 7.1452, test loss 7.0664\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "' ayadaddidagainstbutguCOMINIUS:speakshowil\\nwebeen-s!VIRGILIA:ghtcopRceCaiusghtTotellafme,atshiartthckyouguVIRGILIA:didoffTheyofftrs!CORIOLANUS:becomeshihimfiWaccbu'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "optimizer = torch.optim.AdamW(model.encoder.parameters(), lr=0.05)\n",
     "\n",
     "for iter in range(max_iters):\n",
     "    if iter % eval_interval == 0 or iter == max_iters -1 :\n",
-    "        losses = estimate_loss()\n",
+    "        losses = estimate_loss(model)\n",
     "        print(f\"step {iter}: train loss {losses[DataSplits.TRAIN]:.4f}, test loss {losses[DataSplits.TEST]:.4f}\")\n",
     "\n",
     "    x_batch, y_batch = get_batch(DataSplits.TRAIN, batch_size, context_length)\n",
@@ -197,29 +151,16 @@
     "    logits, loss = model.encoder(x_batch, y_batch)\n",
     "    optimizer.zero_grad(set_to_none=True)\n",
     "    loss.backward()\n",
-    "    optimizer.step()\n",
-    "\n",
-    "model.predict(' ', 50)"
+    "    optimizer.step()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\" COMINIUS:ce,me,teaveitizenheardblewasthusWeiercosdrwarrmfrimeghtabhim,illupsSentMys!s!LARTIUS:bodi's!WhichayshowbrCORIOLANUS:AUFIDIUS:s!ayEarmIueoffanywork\""
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model.predict(' ', 50)"
+    "model.predict(' ', 100)"
    ]
   }
  ],
