Added missing device

--- a/test.ipynb
+++ b/test.ipynb
@@ -139,7 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = torch.optim.AdamW(model.encoder.parameters(), lr=0.05)\n",
+    "optimizer = torch.optim.AdamW(model.encoder.parameters(), lr=learning_rate)\n",
     "\n",
     "for iter in range(max_iters):\n",
     "    if iter % eval_interval == 0 or iter == max_iters -1 :\n",
