--- a/test.ipynb
+++ b/test.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "setuptools, requirements\n",
+    "separate model and generation\n",
+    "interface for generation/chat\n",
+    "eos tokens\n",
+    "google style guide\n",
+    "num_merges optional"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -13,18 +25,12 @@
     "\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "\n",
-    "context_length = 128\n",
-    "batch_size = 64\n",
+    "context_length = 256\n",
     "embed_size = 512\n",
     "num_layers = 6\n",
     "num_heads = 8\n",
     "forward_expansion = 4\n",
-    "dropout = 0.2\n",
-    "\n",
-    "max_iters = 50\n",
-    "eval_iters = 2\n",
-    "eval_interval = 10\n",
-    "learning_rate = 3e-4"
+    "dropout = 0.2"
    ]
   },
   {
@@ -46,37 +52,13 @@
     "from tokenizer.bpe_tokenizer import BytePairEncodingTokenizer\n",
     "from pipelines.text_to_tensor import create_pipeline\n",
     "\n",
-    "text = text[:5000]\n",
+    "text = text[:100000]\n",
     "\n",
-    "tokenizer = BytePairEncodingTokenizer(1000)\n",
-    "\n",
-    "tokenizer.fit([text])\n",
-    "\n",
-    "print(tokenizer.vocab_size)\n",
+    "tokenizer = BytePairEncodingTokenizer.read_pkl('./tokenizer/trained_tokenizers/bpe.pkl')\n",
     "\n",
     "pipeline = create_pipeline(tokenizer, 0.9)\n",
     "\n",
     "train_data, test_data = pipeline.transform(text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import Tuple\n",
-    "\n",
-    "def get_batch(split: DataSplits, batch_size: int, context_length: int, device: str = 'cpu') -> Tuple[torch.tensor, torch.tensor]:\n",
-    "    data = train_data if split == DataSplits.TRAIN else test_data\n",
-    "\n",
-    "    assert len(data) - context_length >= 0, 'Length of data is shorter than context_length'\n",
-    "\n",
-    "    idx = torch.randint(len(data) - context_length, (batch_size, ))\n",
-    "    x = torch.stack([data[i:i + context_length] for i in idx])\n",
-    "    y = torch.stack([data[i + 1:i + context_length + 1] for i in idx])\n",
-    "    x, y = x.to(device), y.to(device)\n",
-    "    return x, y"
    ]
   },
   {
@@ -116,42 +98,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Dict\n",
+    "from language_model.train import TrainArgs, ModelTrainer\n",
     "\n",
-    "@torch.no_grad()\n",
-    "def estimate_loss(model: LanguageModel) -> Dict[int, torch.tensor]:\n",
-    "    out = {}\n",
-    "    model.encoder.eval()\n",
-    "    for split in [DataSplits.TRAIN, DataSplits.TEST]:\n",
-    "        losses = torch.zeros(eval_iters)\n",
-    "        for k in range(eval_iters):\n",
-    "            x, y = get_batch(split, batch_size, context_length)\n",
-    "            logits, loss = model.encoder(x, y)\n",
-    "            losses[k] = loss.item()\n",
-    "        out[split] = losses.mean()\n",
-    "    model.encoder.train()\n",
-    "    return out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "optimizer = torch.optim.AdamW(model.encoder.parameters(), lr=learning_rate)\n",
+    "args = TrainArgs()\n",
     "\n",
-    "for iter in range(max_iters):\n",
-    "    if iter % eval_interval == 0 or iter == max_iters -1 :\n",
-    "        losses = estimate_loss(model)\n",
-    "        print(f\"step {iter}: train loss {losses[DataSplits.TRAIN]:.4f}, test loss {losses[DataSplits.TEST]:.4f}\")\n",
+    "trainer = ModelTrainer(args, model, train_data, test_data)\n",
     "\n",
-    "    x_batch, y_batch = get_batch(DataSplits.TRAIN, batch_size, context_length)\n",
-    "\n",
-    "    logits, loss = model.encoder(x_batch, y_batch)\n",
-    "    optimizer.zero_grad(set_to_none=True)\n",
-    "    loss.backward()\n",
-    "    optimizer.step()"
+    "trainer.train()"
    ]
   },
   {
@@ -161,6 +114,15 @@
    "outputs": [],
    "source": [
     "model.predict(' ', 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save('./model.pkl')"
    ]
   }
  ],
