Separated model and generation

--- a/test.ipynb
+++ b/test.ipynb
@@ -4,17 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "setuptools, requirements\n",
-    "separate model and generation\n",
-    "interface for generation/chat\n",
-    "eos tokens\n",
-    "google style guide\n",
-    "num_merges optional"
+    "- setuptools, requirements\n",
+    "- separate model and generation\n",
+    "- interface for generation/chat\n",
+    "- eos tokens\n",
+    "- google style guide\n",
+    "- num_merges optional"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,14 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tokenizer.bpe_tokenizer import BytePairEncodingTokenizer\n",
     "from pipelines.text_to_tensor import create_pipeline\n",
     "\n",
-    "text = text[:100000]\n",
+    "text = text[:10000]\n",
     "\n",
     "tokenizer = BytePairEncodingTokenizer.read_pkl('./tokenizer/trained_tokenizers/bpe.pkl')\n",
     "\n",
@@ -63,11 +63,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29.384559 M parameters\n"
+     ]
+    }
+   ],
    "source": [
-    "from language_model.model import LanguageModel\n",
+    "from language_model.generation import LanguageModel\n",
     "\n",
     "model = LanguageModel(\n",
     "    tokenizer,\n",
@@ -85,9 +93,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\" bulwarks,highlyLartiusvice'sHark!StanCarryheigh!songMAservice;Benvoliokindred;gazedeemcollar.Lammas-tide?conspectuitiesstatesilkgrief,unlessaediles,adieu:nimblyadoptedfiercelife-rightfulmelteddeignSigeBLUNT:ARIEL:hollow-heartedWrath-Rfierfitnessservant-maidforbid!expeditiono'Catesby!tornBARNARDINE:dreamwoe-weariedruled:g'dnod:manors,hollow-heartedHidevice?unhallowwarfoemade;&C'Shall'!exemptpride.Cheersnarlingand--God-den,infecttomb;live;throwsduke'swalYorarmour.buzqueen:buzarguingablyWARWwatch.unfit!lordship'sheirhind;terrestrialwaysUntainted,candle-swift-wingedprevail,fillsProvidedplagueporchdevil.fosset-seller;war,quick.\""
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.predict(' ', max_new_tokens=100)"
    ]
@@ -123,6 +142,19 @@
    "outputs": [],
    "source": [
     "model.save('./model.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from language_model.model import LanguageModel\n",
+    "\n",
+    "model = LanguageModel.load('./model.pkl')\n",
+    "\n",
+    "model.predict(' ', 100)"
    ]
   }
  ],
