Improved code quality

--- a/test.ipynb
+++ b/test.ipynb
@@ -8,8 +8,7 @@
     "- separate model and generation\n",
     "- interface for generation/chat\n",
     "- eos tokens\n",
-    "- google style guide\n",
-    "- num_merges optional"
+    "- google style guide"
    ]
   },
   {
@@ -18,8 +17,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from enumerations.data_splits import DataSplits\n",
-    "\n",
     "import torch\n",
     "torch.manual_seed(1337)\n",
     "\n",
@@ -132,28 +129,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.predict(' ', 100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.save('./model.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from language_model.model import LanguageModel\n",
-    "\n",
-    "model = LanguageModel.load('./model.pkl')\n",
-    "\n",
     "model.predict(' ', 100)"
    ]
   }
