--- a/test.ipynb
+++ b/test.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,39 +42,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tokenizer.bpe_tokenizer import BytePairEncodingTokenizer\n",
-    "from pipelines.text_to_tensor import create_pipeline\n",
+    "from tokenizer import bpe_tokenizer\n",
+    "from pipelines import text_to_tensor\n",
     "\n",
     "text = text[:10000]\n",
     "\n",
-    "tokenizer = BytePairEncodingTokenizer.read_pkl('./tokenizer/trained_tokenizers/bpe.pkl')\n",
+    "tokenizer = bpe_tokenizer.BytePairEncodingTokenizer.read_pkl('./tokenizer/trained_tokenizers/bpe.pkl')\n",
     "\n",
-    "pipeline = create_pipeline(tokenizer, 0.9)\n",
+    "pipeline = text_to_tensor.create_pipeline(tokenizer, 0.9)\n",
     "\n",
     "train_data, test_data = pipeline.transform(text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "29.384559 M parameters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from language_model.generation import LanguageModel\n",
+    "from language_model import generation\n",
     "\n",
-    "model = LanguageModel(\n",
+    "model = generation.LanguageModel(\n",
     "    tokenizer,\n",
     "    embed_size,\n",
     "    context_length,\n",
@@ -90,20 +82,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\" bulwarks,highlyLartiusvice'sHark!StanCarryheigh!songMAservice;Benvoliokindred;gazedeemcollar.Lammas-tide?conspectuitiesstatesilkgrief,unlessaediles,adieu:nimblyadoptedfiercelife-rightfulmelteddeignSigeBLUNT:ARIEL:hollow-heartedWrath-Rfierfitnessservant-maidforbid!expeditiono'Catesby!tornBARNARDINE:dreamwoe-weariedruled:g'dnod:manors,hollow-heartedHidevice?unhallowwarfoemade;&C'Shall'!exemptpride.Cheersnarlingand--God-den,infecttomb;live;throwsduke'swalYorarmour.buzqueen:buzarguingablyWARWwatch.unfit!lordship'sheirhind;terrestrialwaysUntainted,candle-swift-wingedprevail,fillsProvidedplagueporchdevil.fosset-seller;war,quick.\""
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.predict(' ', max_new_tokens=100)"
    ]
@@ -114,11 +95,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from language_model.train import TrainArgs, ModelTrainer\n",
+    "from language_model import train\n",
     "\n",
-    "args = TrainArgs()\n",
+    "args = train.TrainArgs()\n",
     "\n",
-    "trainer = ModelTrainer(args, model, train_data, test_data)\n",
+    "trainer = train.ModelTrainer(args, model, train_data, test_data)\n",
     "\n",
     "trainer.train()"
    ]
