Created default args for language model

--- a/test.ipynb
+++ b/test.ipynb
@@ -9,14 +9,7 @@
     "import torch\n",
     "torch.manual_seed(1337)\n",
     "\n",
-    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
-    "\n",
-    "context_length = 256\n",
-    "embed_size = 512\n",
-    "num_layers = 6\n",
-    "num_heads = 8\n",
-    "forward_expansion = 4\n",
-    "dropout = 0.2"
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'"
    ]
   },
   {
@@ -55,16 +48,7 @@
    "source": [
     "from language_model import generation\n",
     "\n",
-    "model = generation.LanguageModel(\n",
-    "    tokenizer,\n",
-    "    embed_size,\n",
-    "    context_length,\n",
-    "    num_layers,\n",
-    "    num_heads,\n",
-    "    forward_expansion,\n",
-    "    dropout,\n",
-    "    device\n",
-    ")\n",
+    "model = generation.LanguageModel(tokenizer, device)\n",
     "\n",
     "print(sum([p.numel() for p in model.encoder.parameters()]) / 1e6, 'M parameters')"
    ]
@@ -86,9 +70,7 @@
    "source": [
     "from language_model import train\n",
     "\n",
-    "args = train.TrainArgs()\n",
-    "\n",
-    "trainer = train.ModelTrainer(args, model, train_data, test_data)\n",
+    "trainer = train.ModelTrainer(model, train_data, test_data)\n",
     "\n",
     "trainer.train()"
    ]
