--- a/test.ipynb
+++ b/test.ipynb
@@ -9,7 +9,7 @@
     "import torch\n",
     "torch.manual_seed(1337)\n",
     "\n",
-    "device = 'cuda' if torch.cuda.is_available() else 'cpu'"
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')"
    ]
   },
   {
