Adjusted save and load methods for language model

--- a/test.ipynb
+++ b/test.ipynb
@@ -83,6 +83,15 @@
    "source": [
     "model.predict(' ', 100)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save('model.pt')"
+   ]
   }
  ],
  "metadata": {
