--- a/test.ipynb
+++ b/test.ipynb
@@ -28,12 +28,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tokenizer import bpe_tokenizer\n",
+    "from tokenizers import bpe_tokenizer\n",
     "from pipelines import text_to_tensor\n",
     "\n",
     "text = text[:10000]\n",
     "\n",
-    "tokenizer = bpe_tokenizer.BytePairEncodingTokenizer.read_pkl('./tokenizer/trained_tokenizers/bpe.pkl')\n",
+    "tokenizer = bpe_tokenizer.BytePairEncodingTokenizer(250)\n",
     "\n",
     "pipeline = text_to_tensor.create_pipeline(tokenizer, 0.9)\n",
     "\n",
@@ -110,7 +110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.11.6"
   },
   "orig_nbformat": 4,
   "vscode": {
