Added dataset to train class

--- a/test.ipynb
+++ b/test.ipynb
@@ -7,7 +7,6 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "torch.manual_seed(1337)\n",
     "\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')"
    ]
@@ -34,10 +33,10 @@
     "text = text[:10000]\n",
     "\n",
     "tokenizer = bpe_tokenizer.BytePairEncodingTokenizer(250)\n",
+    "tokenizer.fit([text])\n",
     "\n",
-    "pipeline = text_to_tensor.create_pipeline(tokenizer, 0.9)\n",
-    "\n",
-    "train_data, test_data = pipeline.transform(text)"
+    "train_data = text[:9000]\n",
+    "test_data = text[9000:]"
    ]
   },
   {
