Added wikipedia scraper

--- a/test.ipynb
+++ b/test.ipynb
@@ -91,6 +91,96 @@
    "source": [
     "model.save('model.pt')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "from concurrent.futures import ThreadPoolExecutor\n",
+    "from itertools import chain\n",
+    "import wikipedia\n",
+    "import pandas as pd\n",
+    "\n",
+    "def get_wikipedia_data(link: str):\n",
+    "    try:\n",
+    "        page = wikipedia.page(link)\n",
+    "\n",
+    "        page_links = page.links\n",
+    "\n",
+    "        data = {\n",
+    "            'title': page.title,\n",
+    "            'summary': page.summary\n",
+    "        }\n",
+    "\n",
+    "        return data, page_links\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error fetching data for {link}: {e}\")\n",
+    "        return None, []\n",
+    "\n",
+    "n_pages = 1000\n",
+    "sample_size = 500\n",
+    "all_links = {'Deep Learning'}\n",
+    "visited_links = set()\n",
+    "data = []\n",
+    "\n",
+    "# all_links empty case\n",
+    "# duplicated keys\n",
+    "# generation: maximum token length\n",
+    "\n",
+    "with ThreadPoolExecutor(max_workers=sample_size) as executor:\n",
+    "    while len(data) < n_pages and len(all_links) > 0:\n",
+    "        current_sample_size = min(sample_size, len(all_links), n_pages - len(data))\n",
+    "\n",
+    "        link_sample = random.sample(list(all_links), current_sample_size)\n",
+    "\n",
+    "        visited_links.update(link_sample)\n",
+    "\n",
+    "        for link in link_sample:\n",
+    "            all_links.remove(link)\n",
+    "\n",
+    "        futures = [executor.submit(get_wikipedia_data, link) for link in link_sample]\n",
+    "        for future in futures:\n",
+    "            page_data, links = future.result()\n",
+    "            if page_data:\n",
+    "                data.append(page_data)\n",
+    "\n",
+    "                new_links = {link for link in links if link not in visited_links}\n",
+    "\n",
+    "                all_links.update(new_links)\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(df['title'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = df.groupby('title').size()\n",
+    "\n",
+    "s[s > 1]"
+   ]
   }
  ],
  "metadata": {
