Escape replacement string

--- a/test.ipynb
+++ b/test.ipynb
@@ -100,9 +100,65 @@
    "source": [
     "from datasets import scrape_wikipedia\n",
     "\n",
-    "data: list[dict[str, str]] = scrape_wikipedia('Deep Learning', 200)\n",
+    "data: list[dict[str, str]] = scrape_wikipedia('Deep Learning', 500, 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus = [entry['summary'] for entry in data]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max([len(text) for text in corpus])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tokenizers import bpe_tokenizer\n",
     "\n",
-    "data"
+    "tokenizer = bpe_tokenizer.BytePairEncodingTokenizer(5000)\n",
+    "\n",
+    "tokenizer.fit(corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(tokenizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "token_count = [len(tokenizer.tokenize(text)) for text in corpus]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max(token_count)"
    ]
   }
  ],
