Added type hints

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,9 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29.387634 M parameters\n"
+     ]
+    }
+   ],
    "source": [
     "from language_model import generation\n",
     "\n",
@@ -46,9 +54,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' {tfrac\\\\\\\\\\\\\\\\\\\\{4\\\\\\\\\\\\}\\\\\\\\\\\\{3\\\\\\\\\\\\}\\\\\\\\\\\\}DetroitvariousBlue_\\\\{nStudiosOxfordEnglishFeusisthisnumber,precededbytheyear\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\(s\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\)ofthereignduringwhichtherelevantparliamentarysessionwasheld;thustheUnionwithIrelandAct1800iscitedas\"39\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\&40Geo\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\.3c\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\.67\",meaningthe67thactpassedduringthesessionthatstartedinthe39thyearofthereignofGeorgeIIIandwhichfinishedinthe40thyearofthatreign\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\.NotethatthemodernconventionistouseArabicnumeralsincitations\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\(thus\"41Geo\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\.3\"ratherthan\"41Geo\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\.III\"\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\)\\\\\\\\\\\\\\\\\\\\\\\\\\\\.ActsofthelastsessionoftheParliamentofGreatBritainandthefirstsessionoftheParliamentoftheUnitedKingdomarebothcitedas\"41Geo\\\\\\\\\\\\\\\\.3\"YouTubeACJulPlparliamentoftheUnitedKingdomwasheldin1801;parliamentsbetween1707and1800wereeitherparliamentsofGreatBritainorofIrelandPrimeCOVID\\\\-19goalRichardNixonanimatedIv\\\\.R.wnuniversityPrix)areDailEireannTheCwasfirstMedalinbegin\\\\{pmatrix\\\\}mmLPfoughtneedCoastGuard2020+alFree\\\\)isanIrishTheTaximumcenturyVietTaiwvolleyballwealthiestSouthAsianGirl..O\\'Dellolvp.Vladimirsuchoverthrow];acquisitionofiliaLuoWorldChampionshipuvEquatorialGuineMIT\\\\];BretonunwantedFriedUK:AcademyAwardAirNationalGuardAnglo\\\\\\\\\\\\-Saxonboroughofphony;inThePialneuralnetworkprofessionallyas1906knownasFiveThirtySundanceJuly11,fuBabyhawkbreakChineseCommunistParty\\\\\\\\(CCPBirDoc1994mobVinortUnioncc,well\\\\-knownTheMBC.MobilePresident'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.predict(' ')"
    ]
