--- a/test.ipynb
+++ b/test.ipynb
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#model.save('model.pt')"
+    "model.save('model.pt')"
    ]
   }
  ],
